--- a/jsk_pr2_desktop/pr2_marker_control_main.sh.in
+++ b/jsk_pr2_desktop/pr2_marker_control_main.sh.in
@@ -7,7 +7,7 @@ source ~/.bashrc
 ## for desktop
 sleep 1
 rosrun pr2_dashboard pr2_dashboard &
-xterm -sb -rightbar -sl 99999 +s -e 'export PS1=localuser; source ~/.bashrc; roslaunch pr2_interactive_manipulation pr2_interactive_manipulation_desktop.launch' &
+xterm -sb -rightbar -sl 99999 +s -e 'export PS1=@USER_NAME@; source ~/.bashrc; roslaunch pr2_interactive_manipulation pr2_interactive_manipulation_desktop.launch' &
 # xterm -sb -rightbar -sl 99999 +s -title 'RVIZ' -e 'export PS1=@USER_NAME@; source ~/.bashrc; rosrun rviz rviz -d $(rospack find jsk_pr2_startup)/config/jsk_interactive.vcg' &
 
 sleep 1
