--- a/jsk_pr2_startup/jsk_pr2_sensors/collision_map_sources_laser.yaml
+++ b/jsk_pr2_startup/jsk_pr2_sensors/collision_map_sources_laser.yaml
@@ -1,6 +1,6 @@
 #copy from pr2_object_manipulation_launch/config/collision_map_sources_laser.yaml
 cloud_sources:
-  - name: /tilt_scan_filtered
+  - name: /tilt_scan_shadow2_self_filtered
     frame_subsample: 1
     point_subsample: 1
     sensor_frame: laser_tilt_link
