--- a/jsk_pr2_desktop/pr2_marker_control_main.sh.in
+++ b/jsk_pr2_desktop/pr2_marker_control_main.sh.in
@@ -15,4 +15,4 @@ xterm -sb -rightbar -sl 99999 +s -e ssh -t -l @PR2_USER@ pr1012 'export PS1=@PR2
 ## for robot
 sleep 1
 # ssh -t -l @PR2_USER@ pr1012 'export PS1=@PR2_USER@; source ~/.bashrc; roslaunch jsk_pr2_startup pr2_jsk_interactive.launch'
-ssh -t -l @PR2_USER@ pr1012 'export PS1=@PR2_USER@; source ~/.bashrc; roslaunch pr2_interactive_manipulation pr2_interactive_manipulation_robot.launch'
+ssh -t -l @PR2_USER@ pr1012 'export PS1=@PR2_USER@; source ~/.bashrc; roslaunch pr2_interactive_manipulation pr2_interactive_manipulation_robot.launch kinect_frame_prefix:=/openni kinect_camera_name:=openni'
