--- a/jsk_pr2_desktop/PR2JSKStartup.desktop.in
+++ b/jsk_pr2_desktop/PR2JSKStartup.desktop.in
@@ -3,8 +3,8 @@
 Version=1.0
 Type=Application
 Terminal=false
-Icon[ja_JP]=@PROJECT_SOURCE_DIR@/icons/pr2_jsk_startup.png
-Name[ja_JP]=PR2 JSK StartUp
-Exec=xterm -sb -rightbar -sl 99999 +s -title 'JSK StartUP' -e @PROJECT_SCRIPTS_DIR@/pr2_jsk_startup.sh
-Name=PR2 JSK StartUp
-Icon=@PROJECT_SOURCE_DIR@/icons/pr2_jsk_startup.png
+Icon[ja_JP]=@PROJECT_SOURCE_DIR@/icons/PR2_@ICON_COLOR@_jsk.png
+Name[ja_JP]=JSK StartUp @PR2_NAME@
+Exec=xterm -sb -rightbar -sl 99999 +s -title 'JSK StartUP' -e @PROJECT_SCRIPTS_DIR@/pr2_jsk_startup.sh @PR2_NAME@
+Name=JSK StartUp @PR2_NAME@
+Icon=@PROJECT_SOURCE_DIR@/icons/PR2_@ICON_COLOR@_jsk.png
