--- a/jsk_pr2_desktop/StartPR2.desktop.in
+++ b/jsk_pr2_desktop/StartPR2.desktop.in
@@ -3,8 +3,8 @@
 Version=1.0
 Type=Application
 Terminal=false
-Icon[ja_JP]=@PROJECT_SOURCE_DIR@/icons/start_pr2.png
-Name[ja_JP]=Start PR2
-Exec=xterm -sb -rightbar -sl 99999 +s -title 'Start PR2' -e /bin/bash -l -c @PROJECT_SCRIPTS_DIR@/pr2_start.sh
-Name=Start PR2
-Icon=@PROJECT_SOURCE_DIR@/icons/start_pr2.png
+Icon[ja_JP]=@PROJECT_SOURCE_DIR@/icons/PR2_@ICON_COLOR@_start.png
+Name[ja_JP]=Start @PR2_NAME@
+Exec=xterm -sb -rightbar -sl 99999 +s -title 'Start PR2' -e /bin/bash -l -c @PROJECT_SCRIPTS_DIR@/pr2_start.sh @PR2_NAME@
+Name=Start @PR2_NAME@
+Icon=@PROJECT_SOURCE_DIR@/icons/PR2_@ICON_COLOR@_start.png
