--- a/jsk_pr2_desktop/StopPR2.desktop.in
+++ b/jsk_pr2_desktop/StopPR2.desktop.in
@@ -3,8 +3,8 @@
 Version=1.0
 Type=Application
 Terminal=false
-Icon[ja_JP]=@PROJECT_SOURCE_DIR@/icons/stop_pr2.png
-Name[ja_JP]=Stop PR2
-Exec=xterm -sb -rightbar -sl 99999 +s -title 'Stop PR2' -e /bin/bash -l -c @PROJECT_SCRIPTS_DIR@/pr2_stop.sh
-Name=Stop PR2
-Icon=@PROJECT_SOURCE_DIR@/icons/stop_pr2.png
+Icon[ja_JP]=@PROJECT_SOURCE_DIR@/icons/PR2_@ICON_COLOR@_stop.png
+Name[ja_JP]=Stop @PR2_NAME@
+Exec=xterm -sb -rightbar -sl 99999 +s -title 'Stop PR2' -e /bin/bash -l -c @PROJECT_SCRIPTS_DIR@/pr2_stop.sh @PR2_NAME@
+Name=Stop @PR2_NAME@
+Icon=@PROJECT_SOURCE_DIR@/icons/PR2_@ICON_COLOR@_stop.png
