--- a/jsk_pr2_desktop/pr2_jsk_startup.sh.in
+++ b/jsk_pr2_desktop/pr2_jsk_startup.sh.in
@@ -1,14 +1,17 @@
 #!/bin/bash
 set +e
+PR2_NAME=$1
+if [ "$1" == "" ]; then PR2_NAME="pr1012"; fi
 
 export PS1=@USER_NAME@
 source ~/.bashrc
 
+export ROS_MASTER_URI=http://${PR2_NAME}:11311
 ## for desktop
 sleep 1
 rosrun pr2_dashboard pr2_dashboard &
-xterm -sb -rightbar -sl 99999 +s -title "RVIZ" -e 'export PS1=@USER_NAME@; source ~/.bashrc; rosrun rviz rviz -d $(rospack find jsk_pr2_startup)/config/jsk_startup.vcg' &
+xterm -sb -rightbar -sl 99999 +s -title "RVIZ" -e "export PS1=@USER_NAME@; source ~/.bashrc; ROS_MASTER_URI=http://${PR2_NAME}:11311 rosrun rviz rviz -d $(rospack find jsk_pr2_startup)/config/jsk_startup.vcg" &
 
 ## for robot
 sleep 1
-ssh -t -l @PR2_USER@ pr1012 'export PS1=@PR2_USER@; source ~/.bashrc; roslaunch jsk_pr2_startup pr2.launch'
+ssh -t -l @PR2_USER@ @PR2_NAME@ "export PS1=@PR2_USER@; source ~/.bashrc; ROS_MASTER_URI=http://${PR2_NAME}:11311 roslaunch jsk_pr2_startup pr2.launch"
