--- a/jsk_pr2_desktop/RViz.desktop.in
+++ b/jsk_pr2_desktop/RViz.desktop.in
@@ -5,6 +5,6 @@ Type=Application
 Terminal=false
 Icon[ja_JP]=@PROJECT_SOURCE_DIR@/icons/RViz_@ICON_COLOR@.png
 Name[ja_JP]=RViz @PR2_NAME@
-Exec=xterm -sb -rightbar -sl 99999 +s -title 'RViz (@PR2_NAME@)' -e /bin/bash -l -c '@PROJECT_SCRIPTS_DIR@/rviz.sh @PR2_NAME@'
+Exec=xterm -sb -rightbar -sl 99999 +s -title 'RViz (@PR2_NAME@)' -e '@PROJECT_SCRIPTS_DIR@/rviz.sh @PR2_NAME@'
 Name=RViz @PR2_NAME@
 Icon=@PROJECT_SOURCE_DIR@/icons/RViz_@ICON_COLOR@.png
