use _simple model for smaller dae/lisp files

--- a/jsk_baxter_robot/baxtereus/CMakeLists.txt
+++ b/jsk_baxter_robot/baxtereus/CMakeLists.txt
@@ -117,10 +117,15 @@ set(_baxter_urdf ${baxter_description_SOURCE_DIR}/urdf/baxter.urdf)
 set(_urdf_to_collada ${collada_urdf_PREFIX}/lib/collada_urdf/urdf_to_collada)
 set(_collada2eus ${euscollada_PREFIX}/lib/euscollada/collada2eus)
 
-add_custom_command(OUTPUT ${PROJECT_SOURCE_DIR}/baxter.dae
-  COMMAND echo "${_urdf_to_collada} ${_baxter_urdf} baxter.dae"
-  COMMAND ${_urdf_to_collada} ${_baxter_urdf} ${PROJECT_SOURCE_DIR}/baxter.dae
+# as of 2014/1/20, *_simple.DAE files are commited in https://github.com/k-okada/baxter_common
+add_custom_command(OUTPUT ${PROJECT_SOURCE_DIR}/baxter.urdf
+  COMMAND echo \"sed s/.DAE/_simple.DAE/ ${_baxter_urdf} | sed s/base_link_simple.DAE/base_link_collision.DAE/ | sed s/PEDESTAL_simple.DAE/pedestal_link_collision.DAE/ > ${PROJECT_SOURCE_DIR}/baxter.urdf\"
+  COMMAND sed s/.DAE/_simple.DAE/ ${_baxter_urdf} | sed s/base_link_simple.DAE/base_link_collision.DAE/ | sed s/PEDESTAL_simple.DAE/pedestal_link_collision.DAE/ > ${PROJECT_SOURCE_DIR}/baxter.urdf
   DEPENDS ${_baxter_urdf})
+add_custom_command(OUTPUT ${PROJECT_SOURCE_DIR}/baxter.dae
+  COMMAND echo "${_urdf_to_collada} ${PROJECT_SOURCE_DIR}/baxter.urdf baxter.dae"
+  COMMAND ${_urdf_to_collada} ${PROJECT_SOURCE_DIR}/baxter.urdf ${PROJECT_SOURCE_DIR}/baxter.dae
+  DEPENDS ${PROJECT_SOURCE_DIR}/baxter.urdf)
 add_custom_command(OUTPUT ${PROJECT_SOURCE_DIR}/baxter.l
   COMMAND echo "${_collada2eus} baxter.dae baxter.l"
   COMMAND ${_collada2eus} ${PROJECT_SOURCE_DIR}/baxter.dae ${PROJECT_SOURCE_DIR}/baxter.yaml ${PROJECT_SOURCE_DIR}/baxter.l
