--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ python:
   - "2.7"
 compiler:
   - gcc
+env:
+  - ROS_DISTRO=hydro ROSWS=wstool BUILDER=catkin
+  - ROS_DISTRO=groovy ROSWS=wstool BUILDER=catkin
+  - ROS_DISTRO=groovy ROSWS=rosws BUILDER=rosbuild BUILD_PACKAGES="-a" # posedetectiondb
 #notifications:
 #  email:
 #    recipients:
@@ -14,14 +18,13 @@ compiler:
 #    on_failure: always #[always|never|change] # default: always
 before_install: # Use this to prepare the system to install prerequisites or dependencies
   # Define some config vars
-  - export ROS_DISTRO=hydro
   - export CI_SOURCE_PATH=$(pwd)
   - export REPOSITORY_NAME=${PWD##*/}
   - echo "Testing branch $TRAVIS_BRANCH of $REPOSITORY_NAME"
   - sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu precise main" > /etc/apt/sources.list.d/ros-latest.list'
   - wget http://packages.ros.org/ros.key -O - | sudo apt-key add -
   - sudo apt-get update -qq
-  - sudo apt-get install -qq -y python-catkin-pkg python-rosdep python-wstool ros-$ROS_DISTRO-catkin ros-$ROS_DISTRO-ros
+  - sudo apt-get install -qq -y python-catkin-pkg python-rosdep python-wstool ros-$ROS_DISTRO-catkin ros-$ROS_DISTRO-ros python-rosinstall
   # MongoDB hack - I don't fully understand this but its for moveit_warehouse
   - sudo apt-get remove -y mongodb mongodb-10gen
   - sudo apt-get install -y mongodb-clients mongodb-server -o Dpkg::Options::="--force-confdef" # default actions
@@ -34,9 +37,11 @@ install: # Use this to install any prerequisites or dependencies necessary to ru
   # Create workspace
   - mkdir -p ~/ros/ws_$REPOSITORY_NAME/src
   - cd ~/ros/ws_$REPOSITORY_NAME/src
-  - wstool init .
-  - wstool merge http://raw.github.com/$TRAVIS_REPO_SLUG/$TRAVIS_BRANCH/.rosinstall
-  - wstool update
+  - $ROSWS init .
+  - $ROSWS merge file://$CI_SOURCE_PATH/.rosinstall
+  - if [ $ROSWS = rosws ] ; then $ROSWS merge /opt/ros/$ROS_DISTRO/.rosinstall; fi
+  - $ROSWS update -j10
+  - if [ $ROSWS = rosws ] ; then $ROSWS set --git $REPOSITORY_NAME https://dummy.com/dummy -y; fi
   - ln -s $CI_SOURCE_PATH . # Link the repo we are testing to the new workspace
   - cd ../
   # Install dependencies for source repos
@@ -44,14 +49,14 @@ install: # Use this to install any prerequisites or dependencies necessary to ru
 before_script: # Use this to prepare your build for testing e.g. copy database configurations, environment variables, etc.
   - source /opt/ros/$ROS_DISTRO/setup.bash
 script: # All commands must exit with code 0 on success. Anything else is considered failure.
-  - catkin_make
-  - catkin_make test -j8
-  - catkin_make install
-  #- rm -fr devel src build
-  - source install/setup.bash
-  #- find install -iname "*.test" -print0 | xargs -0 -n1 rostest
+  - cd ~/ros/ws_$REPOSITORY_NAME
+  - if [ $BUILDER = rosbuild ]; then source src/setup.sh; cd src; fi
+  - rospack profile
+  - if [ $BUILDER = catkin ]; then catkin_make -j4; else rosmake $BUILD_PACKAGES --profile --pjobs=4; fi
+  - if [ $BUILDER = catkin ]; then catkin_make test; else rosmake $BUILD_PACKAGES --test-only; fi
+  - if [ $BUILDER = catkin ]; then catkin_make install; fi
+  - if [ $BUILDER = catkin ]; then rm -fr devel src build; source install/setup.bash; else source setup.sh; fi
 after_failure:
   - if [ -e ./build/Testing/Temporary/LastTest.log ]; then cat ./build/Testing/Temporary/LastTest.log; fi
   - find ${HOME}/.ros/test_results -type f -exec echo "== {} ==" \; -exec cat {} \;
   - for file in ${HOME}/.ros/log/rostest-*; do echo "=== $file ==="; cat $file; done
-
