--- a/.travis.yml
+++ b/.travis.yml
@@ -57,6 +57,7 @@ script: # All commands must exit with code 0 on success. Anything else is consid
   - cd ~/ros/ws_$REPOSITORY_NAME
   - if [ $BUILDER = rosbuild ]; then source src/setup.sh; cd src; fi
   - rospack profile
+  - if [ $BUILDER = rosbuild ]; then rosmake roseus; rosrun roseus roseus; cd src; fi
   - if [ $BUILDER = catkin ]; then catkin_make -j4; else rosmake $BUILD_PACKAGES --profile --pjobs=4; fi
   - if [ $BUILDER = catkin ]; then if [ "$CATKIN_PACKAGES" != "" ]; then catkin_make test --pkg $CATKIN_PACKAGES; fi; else rosmake $BUILD_PACKAGES --test-only; fi
   - if [ $BUILDER = catkin ]; then catkin_make install; fi
