--- a/jsk_pr2_desktop/CMakeLists.txt
+++ b/jsk_pr2_desktop/CMakeLists.txt
@@ -20,6 +20,10 @@ configure_file(${PROJECT_SOURCE_DIR}/pr2_marker_control_main.sh.in
   ${PROJECT_SCRIPTS_DIR}/pr2_marker_control_main${PR2_NAME}.sh)
 configure_file(${PROJECT_SOURCE_DIR}/detect_cans_demo.sh.in
   ${PROJECT_SCRIPTS_DIR}/detect_cans_demo${PR2_NAME}.sh)
+configure_file(${PROJECT_SOURCE_DIR}/pr2_teleop_robot.sh.in
+  ${PROJECT_SCRIPTS_DIR}/pr2_teleop_robot${PR2_NAME}.sh)
+configure_file(${PROJECT_SOURCE_DIR}/pr2_teleop_remote.sh.in
+  ${PROJECT_SCRIPTS_DIR}/pr2_teleop_remote${PR2_NAME}.sh)
 
 macro(configure_and_register src dst)
   configure_file(${src} ${dst})
@@ -42,6 +46,11 @@ macro(configure_icon_files icol iname)
     ${SETUP_DIRECTORY}/StopPR2${PR2_NAME}.desktop)
   configure_and_register(${PROJECT_SOURCE_DIR}/RViz.desktop.in
     ${SETUP_DIRECTORY}/RViz${PR2_NAME}.desktop)
+  configure_and_register(${PROJECT_SOURCE_DIR}/PR2TeleopRobot.desktop.in
+    ${SETUP_DIRECTORY}/PR2TeleopRobot${PR2_NAME}.desktop)
+  configure_and_register(${PROJECT_SOURCE_DIR}/PR2TeleopRemote.desktop.in
+    ${SETUP_DIRECTORY}/PR2TeleopRemote${PR2_NAME}.desktop)
+
 endmacro(configure_icon_files)
 
 configure_icon_files(blue pr1012)
@@ -54,9 +63,13 @@ add_custom_target(desktop ALL DEPENDS
   ${PROJECT_SOURCE_DIR}/StartPR2.desktop.in
   ${PROJECT_SOURCE_DIR}/StopPR2.desktop.in
   ${PROJECT_SOURCE_DIR}/RViz.desktop.in
+  ${PROJECT_SOURCE_DIR}/PR2TeleopRobot.desktop.in
+  ${PROJECT_SOURCE_DIR}/PR2TeleopRemote.desktop.in
 #  ${PROJECT_SOURCE_DIR}/pr2_jsk_startup.sh.in
   ${PROJECT_SOURCE_DIR}/pr2_marker_control_main.sh.in
   ${PROJECT_SOURCE_DIR}/detect_cans_demo.sh.in
+  ${PROJECT_SOURCE_DIR}/pr2_teleop_robot.sh.in
+  ${PROJECT_SOURCE_DIR}/pr2_teleop_remote.sh.in
   )
 #set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES
 #  "${SETUP_DIRECTORY}/PR2Dashboard.desktop;${SETUP_DIRECTORY}/PR2JSKStartup.desktop;${SETUP_DIRECTORY}/PR2MarkerControl.desktop;${SETUP_DIRECTORY}/StartPR2.desktop;${SETUP_DIRECTORY}/StopPR2.desktop;${PROJECT_SCRIPTS_DIR}/rviz.sh;${PROJECT_SCRIPTS_DIR}/pr2_jsk_startup.sh;${PROJECT_SCRIPTS_DIR}/pr2_marker_control_main.sh;${PROJECT_SCRIPTS_DIR}/detect_cans_demo.sh"
