--- a/jsk_baxter_robot/jsk_baxter_web/package.xml
+++ b/jsk_baxter_robot/jsk_baxter_web/package.xml
@@ -10,15 +10,15 @@
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rosbridge_server</build_depend>
-  <build_depend>roswww</build_depend>
+  <build_depend>rwt_ros</build_depend>
   <build_depend>baxter_description</build_depend>
   <build_depend>robot_state_publisher</build_depend>
-  <build_depend>joint_state_publisher</build_depend>
+  <!-- <build_depend>joint_state_publisher</build_depend> -->
   <build_depend>tf2_web_republisher</build_depend>
   <run_depend>rosbridge_server</run_depend>
-  <run_depend>roswww</run_depend>
+  <run_depend>rwt_ros</run_depend>
   <run_depend>baxter_description</run_depend>
   <run_depend>robot_state_publisher</run_depend>
-  <run_depend>joint_state_publisher</run_depend>
+  <!-- <run_depend>joint_state_publisher</run_depend> -->
   <run_depend>tf2_web_republisher</run_depend>
 </package>
