--- a/jsk_baxter_robot/jsk_baxter_startup/package.xml
+++ b/jsk_baxter_robot/jsk_baxter_startup/package.xml
@@ -41,6 +41,7 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>baxter_interface</build_depend>
+  <build_depend>baxter_description</build_depend>
   <build_depend>baxter_tools</build_depend>
   <build_depend>baxter_examples</build_depend>
   <build_depend>openni_launch</build_depend>
@@ -49,6 +50,7 @@
   <build_depend>checkerboard_detector</build_depend>
   <build_depend>topic_tools</build_depend>
   <run_depend>baxter_interface</run_depend>
+  <run_depend>baxter_description</run_depend>
   <run_depend>baxter_tools</run_depend>
   <run_depend>baxter_examples</run_depend>
   <run_depend>openni_launch</run_depend>
