--- a/jsk_pr2_startup/jsk_pr2_move_base/costmap_common_params.yaml
+++ b/jsk_pr2_startup/jsk_pr2_move_base/costmap_common_params.yaml
@@ -1,18 +1,26 @@
 # original : pr2_navigation_config/move_base/costmap_common_params.yaml
 #BEGIN VOXEL STUFF
 map_type: voxel
+unknown_cost_value: 0
+obstacle_layer:
+  origin_z: 0.0
+  z_voxels: 16
+  z_resolution: 0.1125
+  unknown_threshold: 8
+  mark_threshold: 0
 origin_z: 0.0
 z_voxels: 16
 z_resolution: 0.1125
-unknown_cost_value: 0
 unknown_threshold: 8
 mark_threshold: 0
 #END VOXEL STUFF
-
+    
 transform_tolerance: 0.2
 obstacle_range: 2.5
 raytrace_range: 3.0
-inflation_radius: 0.55
+inflation_layer:
+  inflation_radius: 0.2
+inflation_radius: 0.2
 
 # BEGIN VOXEL STUFF
 observation_sources: base_scan_marking base_scan tilt_scan ground_object_cloud
