--- a/jsk_pr2_startup/jsk_pr2_move_base/safe_teleop_pr2_params.yaml
+++ b/jsk_pr2_startup/jsk_pr2_move_base/safe_teleop_pr2_params.yaml
@@ -5,8 +5,9 @@ local_costmap:
   transform_tolerance: 0.2
   obstacle_range: 2.5
   raytrace_range: 3.0
-  inflation_radius: 0.55
-
+  inflation_layer:
+    inflation_radius: 0.2
+  inflation_radius: 0.2
   global_frame: odom_combined
   robot_base_frame: base_footprint
   update_frequency: 5.0
@@ -22,10 +23,16 @@ local_costmap:
 
   publish_voxel_map: true
   map_type: voxel
+  obstacle_layer:
+    origin_z: 0.0
+    z_voxels: 16
+    z_resolution: 0.081
+    unknown_cost_value: 0
+    unknown_threshold: 8
+    mark_threshold: 0
   origin_z: 0.0
   z_voxels: 16
   z_resolution: 0.081
-
   unknown_cost_value: 0
   unknown_threshold: 8
   mark_threshold: 0
