Only conside hydro test

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ env:
   - ROS_DISTRO=groovy ROSWS=rosws BUILDER=rosbuild BUILD_PACKAGES="jsk_baxter_robot jsk_nao_robot jsk_pr2_accessories  jsk_pr2_desktop  jsk_pr2_startup  pr2_base_trajectory_action"
   - ROS_DISTRO=hydro ROSWS=wstool BUILDER=catkin
   - ROS_DISTRO=groovy ROSWS=wstool BUILDER=catkin
+matrix:
+  allow_failures:
+    - env: ROS_DISTRO=groovy ROSWS=rosws BUILDER=rosbuild BUILD_PACKAGES="jsk_baxter_robot jsk_nao_robot jsk_pr2_accessories  jsk_pr2_desktop  jsk_pr2_startup  pr2_base_trajectory_action"
+    - env: ROS_DISTRO=groovy ROSWS=wstool BUILDER=catkin
 notifications:
   email:
     on_success: always
