debug the loop of link problem
update to Copy Correctly

--- a/jsk_baxter_robot/jsk_baxter_web/CMakeLists.txt
+++ b/jsk_baxter_robot/jsk_baxter_web/CMakeLists.txt
@@ -1,9 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(jsk_baxter_web)
 
-## Find catkin macros and libraries
-## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
-## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   rosbridge_server
   baxter_description
@@ -11,9 +8,8 @@ find_package(catkin REQUIRED COMPONENTS
   tf2_web_republisher
 )
 
-##Set the symbolic link below www
 execute_process(COMMAND rospack find baxter_description OUTPUT_VARIABLE baxter_description_PACKAGE_PATH OUTPUT_STRIP_TRAILING_WHITESPACE)
-execute_process(COMMAND ln -s ${baxter_description_PACKAGE_PATH}  ${PROJECT_SOURCE_DIR}/www/baxter_description OUTPUT_VARIABLE OUTPUT OUTPUT_STRIP_TRAILING_WHITESPACE)
+execute_process(COMMAND cp -Ru ${baxter_description_PACKAGE_PATH}  ${PROJECT_SOURCE_DIR}/www/ OUTPUT_VARIABLE OUTPUT OUTPUT_STRIP_TRAILING_WHITESPACE)
 
 catkin_package(
 #  INCLUDE_DIRS include
@@ -22,13 +18,6 @@ catkin_package(
 #  DEPENDS system_lib
 )
 
-###########
-## Build ##
-###########
-
-## Specify additional locations of header files
-## Your package locations should be listed before other locations
-# include_directories(include)
 include_directories(
   ${catkin_INCLUDE_DIRS}
 )
