--- a/jsk_pr2_startup/jsk_pr2_moveit/sensors_kinect.yaml
+++ b/jsk_pr2_startup/jsk_pr2_moveit/sensors_kinect.yaml
@@ -1,8 +1,8 @@
 sensors:
   - sensor_plugin: occupancy_map_monitor/PointCloudOctomapUpdater
-    point_cloud_topic: /openni/depth_registered/points_throttle
-    max_range: 5.0
-    point_subsample: 2
-    shape_padding: 0.08
-    shape_scale: 1.0
+    point_cloud_topic: /openni_c2/depth_registered/half/throttle_points
+    max_range: 2.0
+    point_subsample: 1
+    padding_offset: 0.1
+    padding_scale: 1.0
     filtered_cloud_topic: filtered_cloud
