--- a/jsk_pr2_startup/jsk_pr2_moveit/sensors_laser.yaml
+++ b/jsk_pr2_startup/jsk_pr2_moveit/sensors_laser.yaml
@@ -3,6 +3,6 @@ sensors:
     point_cloud_topic: /tilt_laser_cloud2
     max_range: 5.0
 #    point_subsample: 1
-    shape_padding: 0.06
-    shape_scale: 1.0
+    padding_offset: 0.06
+    padding_scale: 1.0
     filtered_cloud_topic: filtered_cloud
