Use laser and kinect to build obstacle occupancy grid

--- a/jsk_pr2_startup/jsk_pr2_moveit/sensors_laser.yaml
+++ b/jsk_pr2_startup/jsk_pr2_moveit/sensors_laser.yaml
@@ -1,6 +1,6 @@
 sensors:
   - sensor_plugin: occupancy_map_monitor/PointCloudOctomapUpdater
-    point_cloud_topic: /tilt_laser_cloud2
+    point_cloud_topic: /tilt_scan_shadow_filtered
     max_range: 5.0
 #    point_subsample: 1
     padding_offset: 0.06
