add roseus/preus to rundepend

--- a/jsk_baxter_robot/baxtereus/package.xml
+++ b/jsk_baxter_robot/baxtereus/package.xml
@@ -51,6 +51,8 @@
   <run_depend>baxter_description</run_depend>
   <run_depend>baxter_interface</run_depend>
   <run_depend>baxter_tools</run_depend>
+　<run_depend>roseus</run_depend>
+　<run_depend>pr2eus</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
