--- a/jsk_naoqi_robot/jsk_pepper_startup/package.xml
+++ b/jsk_naoqi_robot/jsk_pepper_startup/package.xml
@@ -46,6 +46,7 @@
   <build_depend>rostwitter</build_depend>
 
   <run_depend>nao_driver</run_depend>
+  <run_depend>nao_interaction_msgs</run_depend>
   <run_depend>roseus</run_depend>
   <run_depend>rostwitter</run_depend>
 
