--- a/jsk_baxter_robot/jsk_baxter_startup/package.xml
+++ b/jsk_baxter_robot/jsk_baxter_startup/package.xml
@@ -36,7 +36,8 @@
   <run_depend>dynamic_tf_publisher</run_depend>
   <run_depend>rostwitter</run_depend>
   <run_depend>image_view</run_depend>
- 
+  <run_depend>face_recognition</run_depend>
+
   <export>
   </export>
 </package>
