--- a/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_moveit/sensors.yaml
+++ b/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_moveit/sensors.yaml
@@ -6,3 +6,9 @@ sensors:
     padding_offset: 0.1
     padding_scale: 1.0
     filtered_cloud_topic: filtered_cloud
+  - sensor_plugin: occupancy_map_monitor/PointCloudOctomapUpdater
+    point_cloud_topic: /tilt_scan_shadow_filtered
+    max_range: 5.0
+    padding_offset: 0.06
+    padding_scale: 1.0
+    filtered_cloud_topic: filtered_laser_cloud
