--- a/jsk_baxter_robot/baxtereus/baxter.yaml
+++ b/jsk_baxter_robot/baxtereus/baxter.yaml
@@ -5,23 +5,25 @@
 larm:
   - left_s0          : larm-shoulder-y
   - left_s1          : larm-shoulder-p
-  - left_e0          : larm-elbow-r
+  - left_e0          : larm-shoulder-r
   - left_e1          : larm-elbow-p
-  - left_w0          : larm-wrist-r
+  - left_w0          : larm-elbow-r
   - left_w1          : larm-wrist-p
+  - left_w2          : larm-wrist-r
 rarm:
   - right_s0         : rarm-shoulder-y
   - right_s1         : rarm-shoulder-p
-  - right_e0         : rarm-elbow-r
+  - right_e0         : rarm-shoulder-r
   - right_e1         : rarm-elbow-p
-  - right_w0         : rarm-wrist-r
+  - right_w0         : rarm-elbow-r
   - right_w1         : rarm-wrist-p
+  - right_w2         : rarm-wrist-r
 head:
   - head_pan   : head-neck-y
 
 angle-vector:
-  reset-pose : [20, -25, -40, 60, -20, 80, -20, -25, 40, 60, 20, 80, 0]
-  reset-manip-pose : [-13, -60, -50, 118, 29, 42, 13, -63, 50, 118, -29, 42, 0]
+  reset-pose : [0, 20, -25, -40, 60, -20, 80, 0, -20, -25, 40, 60, 20, 80, 0, 0]
+  reset-manip-pose : [0, -13, -60, -50, 118, 29, 42, 0, 13, -63, 50, 118, -29, 42, 0]
 
 larm-end-coords:
   parent : left_hand
@@ -31,3 +33,7 @@ rarm-end-coords:
   parent : right_hand
   translate : [0, 0, 0.10]
   rotate : [-0.57735, -0.57735, -0.57735, 120]
+head-end-coords:
+  parent : head_camera
+  translate : [0, 0, 0]
+  rotate : [ 0, 0, 1, 0]
