add tuck-pose and untuck-pose, thanks to wkentaro, iory

--- a/jsk_baxter_robot/baxtereus/baxter.yaml
+++ b/jsk_baxter_robot/baxtereus/baxter.yaml
@@ -23,7 +23,9 @@ head:
 
 angle-vector:
   reset-pose : [0, 20, -25, -40, 60, -20, 80, 0, -20, -25, 40, 60, 20, 80, 0, 0]
-  reset-manip-pose : [0, -13, -60, -50, 118, 29, 42, 0, 13, -63, 50, 118, -29, 42, 0]
+  reset-manip-pose  : [0,  -5,  -57, -68, 111, 38, 59, 0,  5,  -57,   68, 111, -38, 59, 0]
+  untuck-pose : [0,  -5,  -57, -68, 111, 38, 59, 0,  5,  -57,   68, 111, -38, 59, 0] # this is reset-manip-pose
+  tuck-pose   : [0, -57, -119, 152, 146,  0,  0, 0, 57, -119, -152, 136,   0,  0, 0]
 
 larm-end-coords:
   parent : left_hand
