--- a/jsk_naoqi_robot/jsk_pepper_startup/CMakeLists.txt
+++ b/jsk_naoqi_robot/jsk_pepper_startup/CMakeLists.txt
@@ -4,10 +4,7 @@ project(jsk_pepper_startup)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS
-  roseus
-  rostwitter
-)
+#find_package(catkin REQUIRED COMPONENTS roseus rostwitter)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
