--- a/jsk_naoqi_robot/jsk_pepper_startup/package.xml
+++ b/jsk_naoqi_robot/jsk_pepper_startup/package.xml
@@ -46,7 +46,7 @@
 
   <run_depend>nao_interaction_launchers</run_depend>
   <run_depend>nao_interaction_msgs</run_depend>
-  <run_depend>jsk_pepper_bringup</run_depend>
+  <run_depend>pepper_bringup</run_depend>
   <run_depend>topic_tools</run_depend>
   <run_depend>turtlebot_teleop</run_depend>
   <run_depend>image_view</run_depend>
