add install commands to cmake

--- a/jsk_naoqi_robot/pepper_bringup/CMakeLists.txt
+++ b/jsk_naoqi_robot/pepper_bringup/CMakeLists.txt
@@ -5,3 +5,7 @@ find_package(catkin REQUIRED)
 
 catkin_package()
 
+install(DIRECTORY launch
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+  USE_SOURCE_PERMISSIONS)
+
