add install commands to cmake

--- a/jsk_baxter_robot/jsk_baxter_startup/CMakeLists.txt
+++ b/jsk_baxter_robot/jsk_baxter_startup/CMakeLists.txt
@@ -13,3 +13,10 @@ catkin_package(
 include_directories(
   ${catkin_INCLUDE_DIRS}
 )
+
+install(DIRECTORY config jsk_baxter_joy jsk_baxter_lifelog jsk_baxter_moveit jsk_baxter_sensors
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+  USE_SOURCE_PERMISSIONS)
+
+install(FILES baxter.launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+
