--- a/jsk_baxter_robot/jsk_baxter_web/CMakeLists.txt
+++ b/jsk_baxter_robot/jsk_baxter_web/CMakeLists.txt
@@ -21,3 +21,7 @@ catkin_package(
 include_directories(
   ${catkin_INCLUDE_DIRS}
 )
+
+install(DIRECTORY launch
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+  USE_SOURCE_PERMISSIONS)
