--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,13 @@ python:
 compiler:
   - gcc
 env:
+  - ROS_DISTRO=hydro  ROSWS=wstool BUILDER=catkin    USE_DEB=true
   - ROS_DISTRO=hydro  ROSWS=wstool BUILDER=catkin    USE_DEB=false
+  - ROS_DISTRO=indigo  ROSWS=wstool BUILDER=catkin   USE_DEB=true
   - ROS_DISTRO=indigo  ROSWS=wstool BUILDER=catkin   USE_DEB=false
 matrix:
   allow_failures:
+    - env: ROS_DISTRO=hydro  ROSWS=wstool BUILDER=catkin    USE_DEB=false
     - env: ROS_DISTRO=indigo  ROSWS=wstool BUILDER=catkin   USE_DEB=false
 before_script:
   - export ROS_PARALLEL_JOBS="-j1 -l1"
