--- a/jsk_baxter_robot/baxtereus/package.xml
+++ b/jsk_baxter_robot/baxtereus/package.xml
@@ -12,7 +12,7 @@
 
   <build_depend>collada_urdf</build_depend>
   <build_depend>euscollada</build_depend>
-  <build_depend>baxter_description</build_depend>
+  <!-- <build_depend>baxter_description</build_depend> -->
 
   <run_depend>collada_urdf</run_depend>
   <run_depend>euscollada</run_depend>
