do not generate baxter_description if baxter_description is not found

--- a/jsk_baxter_robot/jsk_baxter_web/CMakeLists.txt
+++ b/jsk_baxter_robot/jsk_baxter_web/CMakeLists.txt
@@ -1,25 +1,22 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(jsk_baxter_web)
 
-find_package(catkin REQUIRED COMPONENTS
-  rosbridge_server
-  baxter_description
-  robot_state_publisher
-  tf2_web_republisher
-)
+find_package(catkin REQUIRED)
+find_package(baxter_description)
+if(baxter_description_FOUND)
+  if (EXISTS ${baxter_description_SOURCE_DIR}/meshes)
+    set(_baxter_description_location ${baxter_description_SOURCE_DIR}/meshes)
+  elseif (EXISTS ${baxter_description_SOURCE_PREFIX}/meshes)
+    set(_baxter_description_location ${baxter_description_SOURCE_PREFIX}/meshes)
+  elseif (EXISTS ${baxter_description_PREFIX}/share/baxter_description/meshes)
+    set(_baxter_description_location ${baxter_description_PREFIX}/share/baxter_description/meshes)
+  else (EXISTS ${baxter_description_SOURCE_DIR}/meshes)
+    message(FATAL_ERROR "cannot find baxter_description")
+  endif(EXISTS ${baxter_description_SOURCE_DIR}/meshes)
 
-if (EXISTS ${baxter_description_SOURCE_DIR}/meshes)
-  set(_baxter_description_location ${baxter_description_SOURCE_DIR}/meshes)
-elseif (EXISTS ${baxter_description_SOURCE_PREFIX}/meshes)
-  set(_baxter_description_location ${baxter_description_SOURCE_PREFIX}/meshes)
-elseif (EXISTS ${baxter_description_PREFIX}/share/baxter_description/meshes)
-  set(_baxter_description_location ${baxter_description_PREFIX}/share/baxter_description/meshes)
-else (EXISTS ${baxter_description_SOURCE_DIR}/meshes)
-  message(FATAL_ERROR "cannot find baxter_description")
-endif(EXISTS ${baxter_description_SOURCE_DIR}/meshes)
-
-execute_process(COMMAND mkdir -p ${PROJECT_SOURCE_DIR}/www/baxter_description/meshes/)
-execute_process(COMMAND cp -Ru  ${_baxter_description_location}  ${PROJECT_SOURCE_DIR}/www/baxter_description/ OUTPUT_VARIABLE OUTPUT OUTPUT_STRIP_TRAILING_WHITESPACE)
+  execute_process(COMMAND mkdir -p ${PROJECT_SOURCE_DIR}/www/baxter_description/meshes/)
+  execute_process(COMMAND cp -Ru  ${_baxter_description_location}  ${PROJECT_SOURCE_DIR}/www/baxter_description/ OUTPUT_VARIABLE OUTPUT OUTPUT_STRIP_TRAILING_WHITESPACE)
+endif()
 
 catkin_package(
 #  INCLUDE_DIRS include
