--- a/jsk_pr2_robot/jsk_pr2_startup/package.xml
+++ b/jsk_pr2_robot/jsk_pr2_startup/package.xml
@@ -17,6 +17,7 @@
   <build_depend>amcl</build_depend>
   <!-- <build_depend>safe_teleop_pr2</build_depend> -->
   <build_depend>map_server</build_depend>
+  <build_depend>jsk_network_tools</build_depend>
   <!-- <build_depend>pr2_move_base</build_depend> -->
   <!-- <build_depend>pr2_2dnav</build_depend> -->
   <!-- <build_depend>pr2_navigation_self_filter</build_depend> -->
@@ -42,9 +43,7 @@
   <build_depend>tf2</build_depend>
   <build_depend>tf2_ros</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>message_generation</build_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>message_runtime</run_depend>
+  <run_depend>jsk_network_tools</run_depend>
   <export>
     <rqt_gui plugin="${prefix}/plugin.xml"/>
   </export>
