--- a/jsk_pr2_robot/jsk_pr2_startup/package.xml
+++ b/jsk_pr2_robot/jsk_pr2_startup/package.xml
@@ -14,6 +14,7 @@
   <build_depend>openni_camera</build_depend>
   <build_depend>imagesift</build_depend>
   <build_depend>move_base</build_depend>
+  <build_depend>move_base_msgs</build_depend>
   <build_depend>amcl</build_depend>
   <!-- <build_depend>safe_teleop_pr2</build_depend> -->
   <build_depend>map_server</build_depend>
@@ -37,6 +38,7 @@
   <build_depend>jsk_perception</build_depend>
   <build_depend>resized_image_transport</build_depend>
   <build_depend>rospy</build_depend>
+  <build_depend>roseus</build_depend>
   <build_depend>rqt_gui</build_depend>
   <build_depend>rqt_gui_py</build_depend>
   <build_depend>rqt_py_common</build_depend>
