--- a/jsk_pr2_robot/jsk_pr2_startup/package.xml
+++ b/jsk_pr2_robot/jsk_pr2_startup/package.xml
@@ -25,9 +25,9 @@
   <!-- <build_depend>pr2_navigation_self_filter</build_depend> -->
   <!-- <build_depend>pr2_navigation_teleop</build_depend> -->
   <!-- <build_depend>pr2_navigation_slam</build_depend> -->
-  <!-- <build_depend>pr2_base_trajectory_action</build_depend> -->
+  <build_depend>pr2_base_trajectory_action</build_depend>
   <!-- <build_depend>pr2_arm_navigation_perception</build_depend> -->
-  <!-- <build_depend>pr2_gripper_sensor_action</build_depend> -->
+  <build_depend>pr2_gripper_sensor_action</build_depend>
   <build_depend>topic_tools</build_depend>
   <build_depend>mjpeg_server</build_depend>
   <build_depend>dynamic_tf_publisher</build_depend>
@@ -46,8 +46,13 @@
   <build_depend>tf2</build_depend>
   <build_depend>tf2_ros</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>jsk_robot_startup</build_depend>
+  <build_depend>pr2_mannequin_mode</build_depend>
   <run_depend>jsk_network_tools</run_depend>
   <run_depend>dwa_local_planner</run_depend>
+  <run_depend>jsk_robot_startup</run_depend>
+  <run_depend>pr2_mannequin_mode</run_depend>
+  <run_depend>pr2_gripper_sensor_action</run_depend>
   <export>
     <rqt_gui plugin="${prefix}/plugin.xml"/>
   </export>
