--- a/jsk_pr2_robot/jsk_pr2_startup/package.xml
+++ b/jsk_pr2_robot/jsk_pr2_startup/package.xml
@@ -48,11 +48,13 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>jsk_robot_startup</build_depend>
   <build_depend>pr2_mannequin_mode</build_depend>
+  <build_depend>jsk_interactive_marker</build_depend>
   <run_depend>jsk_network_tools</run_depend>
   <run_depend>dwa_local_planner</run_depend>
   <run_depend>jsk_robot_startup</run_depend>
   <run_depend>pr2_mannequin_mode</run_depend>
   <run_depend>pr2_gripper_sensor_action</run_depend>
+  <run_depend>jsk_interactive_marker</run_depend>
   <export>
     <rqt_gui plugin="${prefix}/plugin.xml"/>
   </export>
