--- a/jsk_pr2_robot/jsk_pr2_startup/CMakeLists.txt
+++ b/jsk_pr2_robot/jsk_pr2_startup/CMakeLists.txt
@@ -9,6 +9,9 @@ catkin_package(
   CATKIN_DEPENDS jsk_network_tools jsk_robot_startup pr2_mannequin_mode pr2_gripper_sensor_action
 )
 
+catkin_add_env_hooks(99.jsk_pr2_startup SHELLS bash zsh
+  DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/env-hooks)
+
 install(DIRECTORY config jsk_pr2_image_transport
   jsk_pr2_joy jsk_pr2_lifelog jsk_pr2_move_base jsk_pr2_moveit
   jsk_pr2_sensors jsk_pr2_warning src
