[test/test-baxter.{l,test}] add test code for baxter model (:self-collision-check)

--- a/jsk_baxter_robot/baxtereus/CMakeLists.txt
+++ b/jsk_baxter_robot/baxtereus/CMakeLists.txt
@@ -5,6 +5,7 @@ project(baxtereus)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  rostest
   collada_urdf
   euscollada
 #  baxter_description
@@ -62,3 +63,5 @@ install(DIRECTORY euslisp
   USE_SOURCE_PERMISSIONS)
 
 install(FILES baxter.l baxter-interface.l baxter-moveit.l baxter.yaml DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+
+add_rostest(test/test-baxter.test)
