--- a/jsk_baxter_robot/baxtereus/package.xml
+++ b/jsk_baxter_robot/baxtereus/package.xml
@@ -12,6 +12,7 @@
 
   <build_depend>collada_urdf</build_depend>
   <build_depend>euscollada</build_depend>
+  <build_depend>rostest</build_depend>
   <!-- <build_depend>baxter_description</build_depend> -->
 
   <run_depend>collada_urdf</run_depend>
@@ -21,6 +22,7 @@
   <run_depend>baxter_tools</run_depend>
   <run_depend>roseus</run_depend>
   <run_depend>pr2eus</run_depend>
+  <run_depend>rostest</run_depend>
 
   <export>
   </export>
