--- a/jsk_baxter_robot/jsk_baxter_startup/package.xml
+++ b/jsk_baxter_robot/jsk_baxter_startup/package.xml
@@ -21,6 +21,7 @@
   <build_depend>rostwitter</build_depend>
   <build_depend>image_view</build_depend>
   <build_depend>roseus</build_depend>
+  <build_depend>rostest</build_depend>
 
   <run_depend>baxter_interface</run_depend>
   <run_depend>baxter_description</run_depend>
