[jsk_nao_startup] add test-code to check if jsk_nao_startup.launch is valid

--- a/jsk_nao_robot/jsk_nao_startup/CMakeLists.txt
+++ b/jsk_nao_robot/jsk_nao_startup/CMakeLists.txt
@@ -8,6 +8,7 @@ find_package(catkin REQUIRED COMPONENTS
   naoqi_driver
   roseus
   rostwitter
+  rostest
 )
 
 ## System dependencies are found with CMake's conventions
@@ -69,6 +70,8 @@ find_package(catkin REQUIRED COMPONENTS
 #   DEPENDENCIES
 #   std_msgs  # Or other packages containing msgs
 # )
+
+add_rostest(test/check_launch.test)
 
 ###################################
 ## catkin specific configuration ##
