--- a/jsk_nao_robot/jsk_nao_startup/package.xml
+++ b/jsk_nao_robot/jsk_nao_startup/package.xml
@@ -43,6 +43,7 @@
 
   <build_depend>naoqi_driver</build_depend>
   <build_depend>roseus</build_depend>
+  <build_depend>rostest</build_depend>
   <build_depend>rostwitter</build_depend>
 
   <run_depend>naoqi_driver</run_depend>
