[jsk_robot_startup] Add gmapping to run_depend

--- a/jsk_robot_common/jsk_robot_startup/package.xml
+++ b/jsk_robot_common/jsk_robot_startup/package.xml
@@ -17,6 +17,7 @@
   <run_depend>mongodb_store</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
+  <run_depend>gmapping</run_depend>
 
   <export>
   </export>
