[jsk_pr2_startup/package.xml] add missing deps for pr2

--- a/jsk_pr2_robot/jsk_pr2_startup/package.xml
+++ b/jsk_pr2_robot/jsk_pr2_startup/package.xml
@@ -59,6 +59,9 @@
   <run_depend>pr2_gripper_sensor_action</run_depend>
   <run_depend>jsk_interactive_marker</run_depend>
   <run_depend>social_navigation_layers</run_depend>
+  <run_depend>pr2_teleop_general</run_depend>
+  <run_depend>pr2_arm_kinematics</run_depend>
+  <run_depend>safe_teleop_base</run_depend>
   <export>
     <rqt_gui plugin="${prefix}/plugin.xml"/>
   </export>
